# VE280

./: .gitignore  README.md
code-check-master/p4/: codestyle.py
code-check-master/p5/: codestyle.py
demo1/: main
lab1_starter_files/: ex1.sh  ex2.cpp  ex3.cpp
lab2_starter_files/: ex1.cpp  ex2.cpp  ex3.cpp
lab3_starter_files/starter_files_2020/: ex1.cpp  ex1.h  ex2.cpp  ex3.cpp  test
lab3_starter_files/submission_2020/: ex1.cpp  ex2.cpp  ex3.cpp
lab4_starter_files/: ex1.cpp  ex2.cpp  ex3.cpp  price_list.txt
lab5_starter_files/: ex1.cpp  ex2.cpp  ex3.cpp  factoredForm.cpp  factoredForm.h  recursive.cpp  rootType.h  standardForm.cpp  standardForm.h
lab6_starter_files/: Makefile  l6  main.cpp  styled.cpp
lab7_starter_files/: CMakeLists.txt  course  course.cpp  course.h  simpletest.cpp
lab8_starter_files/: constant.h  node.cpp  node.h  storyTeller.cpp
lab9_starter_files/: CMakeLists.txt  mylist.h  mylist_impl.h
project1/: p1.cpp
project2/: CMakeLists.txt  bot  bot.cpp  bot.h  bot_lcz  bot_xsy  joj_test_command.txt  main.cpp
project3/: CMakeLists.txt  JOJ test case  blackjack.cpp  blackjact  card.cpp  card.h  deck.cpp  hand.cpp  main.cpp  player.cpp  player.h  player_zxc.cpp
project4/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  dbc  dbc.cpp  test.cpp  testcases.txt  textfile.dbc  textfile.txt
project5/: CMakeLists.txt  Dlist.h  DlistImpl.h  sam.cpp  sample.in  sample.out  sample_s.out  test.cpp
week1/: Week 1.md
week2/: Week 2.md
week3/: Week 3.md
week4/: Week 4.md
week5/: Week 5.md
week6/: week6.md
week7/: week7.md
(+12 files in other folders)
